# portable-pico-player

./: .gitignore  Cargo.toml  build.rs  justfile  rust-toolchain.toml
src/: audio_playback.rs  aux.rs  ble.rs  ble_bas_central.rs  display.rs  file_reader.rs  main.rs  storage.rs
