[package]
name = "pico-player"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-executor = { version = "0.7", default-features = false, features = [
  "task-arena-size-98304",
  "arch-cortex-m",
  "executor-thread",
  "defmt",
  "executor-interrupt",
] }
embassy-time = { version = "0.4.0", default-features = false, features = [
  "defmt",
  "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.3.0", features = [
  "defmt",
  "critical-section-impl",
  "time-driver",
  "intrinsics",
  "rp2040",
] }
embassy-futures = "0.1.1"
embassy-embedded-hal = "0.3.0"
embassy-sync = { version = "0.6", features = ["defmt"] }
trouble-host = { version = "0.1", features = ["derive", "scan"] }
futures = { version = "0.3", default-features = false, features = [
  "async-await",
] }
bt-hci = { version = "0.2", default-features = false, features = ["defmt"] }
cyw43 = { version = "0.3.0", features = [
  "defmt",
  "firmware-logs",
  "bluetooth",
] }
cyw43-pio = { version = "0.3.0", features = ["defmt"] }

defmt = "0.3"
defmt-rtt = "0.4.0"

embedded-hal-bus = "0.1"
cortex-m = { version = "0.7.6" }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
static_cell = "2"
portable-atomic = { version = "1.5", features = ["critical-section"] }
heapless = "0.8.0"
libm = "0.2.11"

ssd1306 = "0.9.0"
embedded-sdmmc = "0.7.0"
mcp4725 = "0.4.2"
wavv = "0.2.0"

# trouble_audio = { git = "https://github.com/LegitCamper/trouble_audio/" , features = ["defmt"]}
# trouble_audio = { path = "../trouble_audio/", features = ["defmt"] }

[build-dependencies]
reqwest = { version = "0.12.9", features = ["blocking"] }

[features]
skip-cyw43-firmware = []

[profile.release]
debug = 2

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "195b1a593a4f51ebc7ae61b5045c620a1dbd25d8" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy.git", rev = "195b1a593a4f51ebc7ae61b5045c620a1dbd25d8" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "195b1a593a4f51ebc7ae61b5045c620a1dbd25d8" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", rev = "195b1a593a4f51ebc7ae61b5045c620a1dbd25d8" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "195b1a593a4f51ebc7ae61b5045c620a1dbd25d8" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git", rev = "195b1a593a4f51ebc7ae61b5045c620a1dbd25d8" }
cyw43 = { git = "https://github.com/embassy-rs/embassy.git", rev = "195b1a593a4f51ebc7ae61b5045c620a1dbd25d8" }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy.git", rev = "195b1a593a4f51ebc7ae61b5045c620a1dbd25d8" }
trouble-host = { git = "https://github.com/embassy-rs/trouble.git", rev = "7700932050221fa68a274fe713f7d1eb3d477ea2" }
# wavv = { git = "https://github.com/samuelleeuwenburg/wavv", rev = "753a315d2434c9f4440e70c86054168ca0deee95" }
wavv = { git = "https://github.com/LegitCamper/wavv" }
