[package]
name = "pico-player"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-executor = { version = "0.7", default-features = false, features = [
  "task-arena-size-98304",
  "arch-cortex-m",
  "executor-thread",
  "defmt",
  "executor-interrupt",
] }
embassy-time = { version = "0.4.0", default-features = false, features = [
  "defmt",
  "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.3.0", features = [
  "defmt",
  "critical-section-impl",
  "time-driver",
  "intrinsics",
  "rp2040",
] }
embassy-futures = "0.1.1"
embassy-embedded-hal = "0.3.0"
embassy-sync = { version = "0.6", features = ["defmt"] }
trouble-host = { version = "0.1", features = ["derive", "scan"] }
futures = { version = "0.3", default-features = false, features = [
  "async-await",
] }
bt-hci = { version = "0.2", default-features = false, features = ["defmt"] }
cyw43 = { version = "0.3.0", features = [
  "defmt",
  "firmware-logs",
  "bluetooth",
] }
cyw43-pio = { version = "0.3.0", features = ["defmt"] }

defmt = "0.3"
defmt-rtt = "0.4.0"

embedded-hal-bus = { version = "0.3.0", features = ["async"] }
embedded-hal = "0.2.7"
embedded-hal-async = "1.0.0"
cortex-m = { version = "0.7.6" }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
static_cell = "2"
portable-atomic = { version = "1.5", features = ["critical-section"] }
heapless = "0.8.0"
format_no_std = "1.2.0"
byteorder = { version = "1.5.0", default-features = false }

mipidsi = "0.9.0"
embedded-graphics = { version = "0.8.1", features = ["defmt"] }
embedded-graphics-core = { version = "0.4.0", features = ["defmt"] }

embedded-sdmmc = { git = "https://github.com/Be-ing/embedded-sdmmc-rs", branch = "bisync", default-features = false, features = [
  "defmt-log",
] }
# audio_parser = { git = "https://github.com/LegitCamper/audio_parser", branch = "async" }
audio_parser = { path = "../audio_parser" }


trouble_audio = { git = "https://github.com/LegitCamper/trouble_audio/", features = [
  "defmt",
], optional = true }
# trouble_audio = { path = "../trouble_audio/", features = ["defmt"] }

[build-dependencies]
reqwest = { version = "0.12.9", features = ["blocking"] }

[features]
skip-cyw43-firmware = []
bluetooth = ["dep:trouble_audio"]

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "17301c00e986c5b8536435ea31ebf5aaf13aed17" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy.git", rev = "17301c00e986c5b8536435ea31ebf5aaf13aed17" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "17301c00e986c5b8536435ea31ebf5aaf13aed17" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", rev = "17301c00e986c5b8536435ea31ebf5aaf13aed17" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "17301c00e986c5b8536435ea31ebf5aaf13aed17" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git", rev = "17301c00e986c5b8536435ea31ebf5aaf13aed17" }
cyw43 = { git = "https://github.com/embassy-rs/embassy.git", rev = "17301c00e986c5b8536435ea31ebf5aaf13aed17" }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy.git", rev = "17301c00e986c5b8536435ea31ebf5aaf13aed17" }
trouble-host = { git = "https://github.com/embassy-rs/trouble.git", rev = "7700932050221fa68a274fe713f7d1eb3d477ea2" }
